--- a/README
+++ b/README
@@ -31,7 +31,7 @@ Data Analysis: [Query] (https://github.com/Mooo99/Google-Case-Study/blob/main/4.
 
 ##Share
 
-![](https://github.com/Mooo99/Google-Case-Study/blob/main/Screenshot%202024-06-08%20054906.png)
+![image](https://github.com/Mooo99/Google-Case-Study/blob/main/Screenshot%202024-06-08%20054906.png)
 
 ##Insights:
 
